paring down the magic incantations